--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -11,3 +11,12 @@
 .input-area{
   padding-top: 1em;
 }
+
+.sent-date-time{
+  font-size:0.75em;
+  color:#aaa;
+}
+
+.user-message{
+  font-size:1.25em;
+}
