--- a/src/app/components/editableMessage/editableMessage.scss
+++ b/src/app/components/editableMessage/editableMessage.scss
@@ -11,6 +11,7 @@
       padding: 0.25em 0.5em;
       margin-bottom: 0.25em;
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+      background:#fff;
     }
     button {
       display:inline;
