--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,26 @@
 <div class="container">
+  <div class="row nav-bar">
+    <div class="col-sm-12 col-md-6 col-md-offset-3">
+      <div class="row">
+        <div class="col-xs-4">
+          <h3>Chat Works</h3>
+        </div>
+        <div class="col-xs-8">
+          <div class="authentication pull-right">
+            <div ng-show="main.isAuthenticated" class="user-profile">
+              {{main.userProfile}}
+              <button type="button" ng-click="main.logout()" class="btn btn-default btn-xs">Logout</button>
+            </div>
+            <form name="authForm" ng-show="!main.isAuthenticated">
+              <input type="text" ng-model="main.username" name="username" placeholder="username" required />
+              <input type="text" ng-model="main.password" name="password" placeholder="password" required />
+              <button type="button" ng-disabled="!authForm.$valid" class="btn btn-default btn-xs" ng-click="main.login()">Login</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-12 col-md-6 col-md-offset-3">
       <h5>My messages</h5>
@@ -15,10 +37,10 @@
   <div class="row">
     <div class="col-sm-12 col-md-6 col-md-offset-3 input-area">
       <div class="row">
-        <div class="col-sm-9">
+        <div class="col-xs-9">
           <input placeholder="myTest" type="text" class="form-control" ng-model="main.userMessage" my-enter="main.sendMessage()" />
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-3 send-button">
           <button type="button" class="btn btn-primary" ng-click="main.sendMessage()" >Send</button>
         </div>
       </div>
