--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -20,3 +20,22 @@
 .user-message{
   font-size:1.25em;
 }
+
+.authentication{
+  padding-top:1.5em;
+  input[type=text]{
+    width: 8em;
+  }
+}
+
+.user-profile{
+  padding-top:0.5em;
+}
+
+.nav-bar{
+  border-bottom: solid 1px #ccc;
+}
+
+.send-button{
+  padding-left:0;
+}
